--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </audio>
     <script src="script.js"></script>
     <div id="footer">
-      <p>&copy; 2024 Copyright rizqyrakaa. All Right Reserved</p>
+      <p>&copy;rizqyrakaaa. buat ayu tersayang❤️</p>
     </div>
   </body>
 </html>
